# AIM-public

./: .gitignore  README.md  setup.cfg
AIM/: AIM.py
AIM/sourcecode/: CouplingFunctions.py  FileHandler.py  UniverseMaster.py
AIM/sourcefiles/: AIMV1-0-3.cpp  default_input.txt
