[metadata]
name = AIM
description = A tool for calculating vibrational spectra
author = Kim E. van Adrichem
platforms = unix, linux, osx, win32
version = 1.0.1
classifiers =
    Programming Language :: Python :: 3

[options]
packages = 
    AIM
    AIM.sourcecode
include_package_data = True
install_requires = 
    MDAnalysis >= 0.20
    numba >= 0.58
    numpy >= 1.22, <=1.26

python_requires = 
    >=3.7, <3.12


[options.package_data]
* = 
    sourcefiles/*
    extra_maps/*


[options.entry_points]
console_scripts =
    AIM = AIM.AIM:main
    
